<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/robot"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp" >

            <ImageView
                android:id="@+id/select_robot_btn"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/my_black_white_selector"
                android:onClick="chooseRobot"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:src="@drawable/robot_tribot" />

            <TextView
                android:id="@+id/robotName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/select_robot_btn"
                android:layout_alignRight="@id/select_robot_btn"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="-14dp"
                android:layout_marginRight="-14dp"
                android:background="@drawable/black_stroke_1px_drawable"
                android:padding="5dp"
                android:text="Tribot"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/program"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_grey" />

        <Spinner
            android:id="@+id/program_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp" />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/my_black_white_selector"
            android:onClick="start"
            android:padding="10dp"
            android:src="@android:drawable/ic_media_play" />
    </LinearLayout>

    <TextView        
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/version"
        android:textColor="@color/gray"
        android:padding="3dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>