<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="@string/directions_slow" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/directions_medium" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directions_fast" />
    </RadioGroup>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/button_up"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:rotation="-90"
                android:src="@android:drawable/ic_media_play" />

            <ImageView
                android:id="@+id/button_down"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:rotation="90"
                android:src="@android:drawable/ic_media_play" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/button_claw_up"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:rotation="90"
                android:src="@android:drawable/ic_media_rew" />

            <ImageView
                android:id="@+id/button_left"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:rotation="180"
                android:src="@android:drawable/ic_media_play" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/button_claw_down"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:rotation="-90"
                android:src="@android:drawable/ic_media_rew" />

            <ImageView
                android:id="@+id/button_right"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:src="@android:drawable/ic_media_play" />
        </LinearLayout>
    </LinearLayout>
    

</LinearLayout>